--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-select": "^2.2.6",
-    "@react-three/fiber": "^9.4.2",
-    "@react-three/drei": "^10.7.7",
+
+    "@react-three/fiber": "8.15.12",
+    "@react-three/drei": "9.105.6",
+    "three": "0.160.0",
+
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.561.0",
-    "next": "^13.5.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "three": "^0.182.0"
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
+    "next": "13.5.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,13 +30,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9",
-    "eslint-config-next": "^13.5.6",
+    "eslint": "8.57.1",
+    "eslint-config-next": "13.5.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
-  "engines": {
-    "node": "24.x"
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
