--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-select": "^2.2.6",
-
-    "@react-three/fiber": "8.15.12",
     "@react-three/drei": "9.105.6",
-    "three": "0.160.0",
-
+    "@react-three/fiber": "8.15.12",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "13.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "three": "0.160.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
