--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-select": "^2.2.6",
-    "@react-three/drei": "9.105.6",
-    "@react-three/fiber": "8.15.12",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.15.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
     "framer-motion": "^10.16.16",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.294.0",
+    "motion": "^12.23.26",
     "next": "13.5.11",
+    "nodemailer": "^7.0.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
-    "three": "0.160.0"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.160.0",
+    "three-globe": "^2.32.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
